Services/external-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  ports:
  - port: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service
subsets:
  - addresses:
    - ip: 103.252.142.18
    ports:
    - port: 443
