Services/k8s-svc-LB.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-loadbalancer
#  annotations:
#    cloud.google.com/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: node
