Services/k8s-svc-client-ip-sa.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-sa
spec:
  sessionAffinity: ClientIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: node
