Services/k8s-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-headless
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: nodeapp
