Services/k8s-svc-named-ports.yaml
apiVersion: v1
kind: Service
metadata:
  name: node
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
  selector:
    app: node
