Services/k8s-svc-nodeport-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-nodeport-onlylocal
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30124
  selector:
    app: node
