Services/k8s-svc-publish-not-ready.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-all
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: nodeapp
  publishNotReadyEndpoints: true
