Services/k8s-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: node
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: node
  type: ClusterIP
