Services/k8s-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8s
spec:
  tls:
  - hosts: 
    - k8s.example.com
    secretName: tls-secret
  rules:
  - host: k8s.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: k8s-nodeport
          servicePort: 80
